[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/leoStuff/mini_game1/mini_game1_logic.gd" type="Script" id=1]
[ext_resource path="res://addons/animated_grid_container_plugin/animated_grid_container.gd" type="Script" id=2]
[ext_resource path="res://StyleBox/green.tres" type="StyleBox" id=3]
[ext_resource path="res://StyleBox/red.tres" type="StyleBox" id=4]
[ext_resource path="res://StyleBox/blue.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="AnimatedGridContainer2" type="Container" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
script = ExtResource( 2 )
rows = 4
horizontal_separation = 5.0
vertical_separation = 5.0
update_time = 0.5
update_ease = 1

[node name="A4" type="Button" parent="AnimatedGridContainer2"]
margin_right = 119.063
margin_bottom = 66.5625
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )

[node name="B4" type="Button" parent="AnimatedGridContainer2"]
margin_left = 124.063
margin_right = 243.125
margin_bottom = 66.5625
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="C4" type="Button" parent="AnimatedGridContainer2"]
margin_left = 248.125
margin_right = 367.188
margin_bottom = 66.5625
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 5 )

[node name="D4" type="Button" parent="AnimatedGridContainer2"]
margin_left = 372.188
margin_right = 491.25
margin_bottom = 66.5625
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )

[node name="A3" type="Button" parent="AnimatedGridContainer2"]
margin_top = 71.5625
margin_right = 119.063
margin_bottom = 138.125
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[node name="B3" type="Button" parent="AnimatedGridContainer2"]
margin_left = 124.063
margin_top = 71.5625
margin_right = 243.125
margin_bottom = 138.125
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="C3" type="Button" parent="AnimatedGridContainer2"]
margin_left = 248.125
margin_top = 71.5625
margin_right = 367.188
margin_bottom = 138.125
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )

[node name="D3" type="Button" parent="AnimatedGridContainer2"]
margin_left = 372.188
margin_top = 71.5625
margin_right = 491.25
margin_bottom = 138.125
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[node name="A2" type="Button" parent="AnimatedGridContainer2"]
margin_top = 143.125
margin_right = 119.063
margin_bottom = 209.688
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[node name="B2" type="Button" parent="AnimatedGridContainer2"]
margin_left = 124.063
margin_top = 143.125
margin_right = 243.125
margin_bottom = 209.688
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="C2" type="Button" parent="AnimatedGridContainer2"]
margin_left = 248.125
margin_top = 143.125
margin_right = 367.188
margin_bottom = 209.688
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )

[node name="D2" type="Button" parent="AnimatedGridContainer2"]
margin_left = 372.188
margin_top = 143.125
margin_right = 491.25
margin_bottom = 209.688
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[node name="A1" type="Button" parent="AnimatedGridContainer2"]
margin_top = 214.688
margin_right = 119.063
margin_bottom = 281.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[node name="B1" type="Button" parent="AnimatedGridContainer2"]
margin_left = 124.063
margin_top = 214.688
margin_right = 243.125
margin_bottom = 281.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="C1" type="Button" parent="AnimatedGridContainer2"]
margin_left = 248.125
margin_top = 214.688
margin_right = 367.188
margin_bottom = 281.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )

[node name="D1" type="Button" parent="AnimatedGridContainer2"]
margin_left = 372.188
margin_top = 214.688
margin_right = 491.25
margin_bottom = 281.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )

[connection signal="pressed" from="AnimatedGridContainer2/A4" to="." method="_on_A4_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/B4" to="." method="_on_B4_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/C4" to="." method="_on_C4_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/D4" to="." method="_on_D4_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/A3" to="." method="_on_A3_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/B3" to="." method="_on_B3_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/C3" to="." method="_on_C3_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/D3" to="." method="_on_D3_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/A2" to="." method="_on_A2_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/B2" to="." method="_on_B2_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/C2" to="." method="_on_C2_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/D2" to="." method="_on_D2_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/A1" to="." method="_on_A1_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/B1" to="." method="_on_B1_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/C1" to="." method="_on_C1_pressed"]
[connection signal="pressed" from="AnimatedGridContainer2/D1" to="." method="_on_D1_pressed"]
